[package]
name = "coucal-rt"
version = "0.5.4"
repository = "https://github.com/tobygomersall/coucal-rt"
authors = ["Toby Gomersall <toby.gomersall@smartacoustics.co.uk>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for PicoRV32 RISC-V CPU"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"
edition = "2018"

[dependencies]
r0 = "0.2.2"
coucal-rs = { git = "https://github.com/tobygomersall/coucal-rs.git" }
picorv32-rt-macros = { path = "macros", version = "0.1.5" }

[features]
default = ["compressed-isa"]
const-fn = ["coucal-rs/const-fn"]
compressed-isa = []
interrupts = []
interrupts-qregs = ["interrupts"]

[workspace]
members = [
  "macros",
]
